# ouhelper-web

./: .gitignore  main.py  pyproject.toml
controller/: __init__.py  get_course_import_df.py  xuanke.py
router/: __init__.py
router/api/: course_import_table.py  upload.py
router/page/: get_page.py
templates/: index.html  xuanke.html
