[project]
name = "ouhelper-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "fastapi>=0.115.12",
    "fastexcel>=0.14.0",
    "jinja2>=3.1.6",
    "polars>=1.30.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
    "xlsxwriter>=3.2.3",
]
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
